5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4060/executions/1684_1100.log
== TEST (2019-04-25 06:50:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a=int(input("Entrada: "))
print("Entrada",a)
if((a!=2)or(a!=5)or(a!=10)or(a!=20)or(a!=50)or(a!=100))
	print("Animal: Invalido")
else:
	if(a==2):
		print("Animal: Tartarura")
	else:
		if(a==5):
			print("Animal: Garça")
		else:
			if(a==10):
				print("Animal: Arara)
			else:
				if(a==20):
					print("Animal: Mico-leao-dourado")
				else:
					if(a==50):
						print("Animal: Onça-pintada")
					else:
						print("Animal: Garoupa")
						
			
-- ERROR:
File "XXXX", line 7
    if((a!=2)or(a!=5)or(a!=10)or(a!=20)or(a!=50)or(a!=100))
                                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 06:51:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a=int(input("Entrada: "))
print("Entrada",a)
if((a!=2)or(a!=5)or(a!=10)or(a!=20)or(a!=50)or(a!=100))
	print("Animal: Invalido")
else:
	if(a==2):
		print("Animal: Tartarura")
	else:
		if(a==5):
			print("Animal: Garça")
		else:
			if(a==10):
				print("Animal: Arara)
			else:
				if(a==20):
					print("Animal: Mico-leao-dourado")
				else:
					if(a==50):
						print("Animal: Onça-pintada")
					else:
						print("Animal: Garoupa")
						
			
-- ERROR:
File "XXXX", line 7
    if((a!=2)or(a!=5)or(a!=10)or(a!=20)or(a!=50)or(a!=100))
                                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 06:51:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a=int(input("Entrada: "))
print("Entrada",a)
if((a!=2)or(a!=5)or(a!=10)or(a!=20)or(a!=50)or(a!=100)):
	print("Animal: Invalido")
else:
	if(a==2):
		print("Animal: Tartarura")
	else:
		if(a==5):
			print("Animal: Garça")
		else:
			if(a==10):
				print("Animal: Arara)
			else:
				if(a==20):
					print("Animal: Mico-leao-dourado")
				else:
					if(a==50):
						print("Animal: Onça-pintada")
					else:
						print("Animal: Garoupa")
						
			
-- ERROR:
File "XXXX", line 17
    print("Animal: Arara)
                        ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 06:52:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a=int(input("Entrada: "))
print("Entrada",a)
if((a!=2)or(a!=5)or(a!=10)or(a!=20)or(a!=50)or(a!=100)):
	print("Animal: Invalido")
else:
	if(a==2):
		print("Animal: Tartarura")
	else:
		if(a==5):
			print("Animal: Garça")
		else:
			if(a==10):
				print("Animal: Arara)
			else:
				if(a==20):
					print("Animal: Mico-leao-dourado")
				else:
					if(a==50):
						print("Animal: Onça-pintada")
					else:
						print("Animal: Garoupa")
						
			
-- ERROR:
File "XXXX", line 17
    print("Animal: Arara)
                        ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 06:52:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a=int(input("Entrada: "))
print("Entrada",a)
if((a!=2)or(a!=5)or(a!=10)or(a!=20)or(a!=50)or(a!=100)):
	print("Animal: Invalido")
else:
	if(a==2):
		print("Animal: Tartarura")
	else:
		if(a==5):
			print("Animal: Garça")
		else:
			if(a==10):
				print("Animal: Arara")
			else:
				if(a==20):
					print("Animal: Mico-leao-dourado")
				else:
					if(a==50):
						print("Animal: Onça-pintada")
					else:
						print("Animal: Garoupa")
						
			
-- OUTPUT:
Entrada 100
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 06:54:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a=int(input("Entrada: "))
print("Entrada",a)
if((a!=2)or(a!=5)or(a!=10)or(a!=20)or(a!=50)or(a!=100)):
	print("Animal: Invalido")
else:
	if(a==2):
		print("Animal: Tartarura")
	else:
		if(a==5):
			print("Animal: Garça")
		else:
			if(a==10):
				print("Animal: Arara")
			else:
				if(a==20):
					print("Animal: Mico-leao-dourado")
				else:
					if(a==50):
						print("Animal: Onça-pintada")
					else:
						print("Animal: Garoupa")
						
			
-- OUTPUT:
Entrada 100
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 06:56:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a=int(input("Entrada: "))
print("Entrada",a)
if((a!=2)or(a!=5)or(a!=10)or(a!=20)or(a!=50)or(a!=100)):
	print("Animal: Invalido")
else:
	print("ok")
						
			
-- EXECUTION TIME:
0.130661
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada 100
Animal: Invalido
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada 50
Animal: Invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 06:56:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a=int(input("Entrada: "))
print("Entrada",a)
if((a!=2)or(a!=5)or(a!=10)or(a!=20)or(a!=50)or(a!=100)):
	print("Animal: Invalido")
else:
	print("ok")
						
			
-- OUTPUT:
Entrada 100
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 06:58:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a=int(input("Entrada: "))
print("Entrada",a)
if((a!=2)or(a!=5)or(a!=10)or(a!=20)or(a!=50)or(a!=100)):
	print("Animal: Invalido")
else:
	print("ok")
						
			
-- OUTPUT:
Entrada 100
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 07:03:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a=int(input("Entrada: "))
print("Entrada",a)
if((a!=2)and(a!=5)and(a!=10)and(a!=20)and(a!=50)and(a!=100)):
	print("Animal: Invalido")
else:
	print("ok")
						
			
-- OUTPUT:
Entrada 100
ok
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 07:04:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a=int(input("Entrada: "))
print("Entrada",a)
if((a!=2)and(a!=5)and(a!=10)and(a!=20)and(a!=50)and(a!=100)):
	print("Animal: Invalido")
else:
	print("ok")
						
			
-- OUTPUT:
Entrada 100
ok
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 07:04:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a=int(input("Entrada: "))
print("Entrada",a)
if((a!=2)and(a!=5)and(a!=10)and(a!=20)and(a!=50)and(a!=100)):
	print("Animal: Invalido")
else:
	pif(a==2):
		print("Animal: Tartarura")
	else:
		if(a==5):
			print("Animal: Garça")
		else:
			if(a==10):
				print("Animal: Arara")
			else:
				if(a==20):
					print("Animal: Mico-leao-dourado")
				else:
					if(a==50):
						print("Animal: Onça-pintada")
					else:
						print("Animal: Garoupa")
						
			
-- ERROR:
File "XXXX", line 10
    pif(a==2):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 07:05:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a=int(input("Entrada: "))
print("Entrada",a)
if((a!=2)and(a!=5)and(a!=10)and(a!=20)and(a!=50)and(a!=100)):
	print("Animal: Invalido")
else:
	if(a==2):
		print("Animal: Tartarura")
	else:
		if(a==5):
			print("Animal: Garça")
		else:
			if(a==10):
				print("Animal: Arara")
			else:
				if(a==20):
					print("Animal: Mico-leao-dourado")
				else:
					if(a==50):
						print("Animal: Onça-pintada")
					else:
						print("Animal: Garoupa")
						
			
-- OUTPUT:
Entrada 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 07:05:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a=int(input("Entrada: "))
print("Entrada",a)
if((a!=2)and(a!=5)and(a!=10)and(a!=20)and(a!=50)and(a!=100)):
	print("Animal: Invalido")
else:
	if(a==2):
		print("Animal: Tartarura")
	else:
		if(a==5):
			print("Animal: Garça")
		else:
			if(a==10):
				print("Animal: Arara")
			else:
				if(a==20):
					print("Animal: Mico-leao-dourado")
				else:
					if(a==50):
						print("Animal: Onça-pintada")
					else:
						print("Animal: Garoupa")
						
			
-- OUTPUT:
Entrada 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 07:06:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a=int(input("Entrada: "))
print("Entrada",a)
if((a!=2)and(a!=5)and(a!=10)and(a!=20)and(a!=50)and(a!=100)):
	print("Animal: Invalido")
else:
	if(a==2):
		print("Animal: Tartarura")
	else:
		if(a==5):
			print("Animal: Garca")
		else:
			if(a==10):
				print("Animal: Arara")
			else:
				if(a==20):
					print("Animal: Mico-leao-dourado")
				else:
					if(a==50):
						print("Animal: Onça-pintada")
					else:
						print("Animal: Garoupa")
						
			
-- OUTPUT:
Entrada 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 07:07:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a=int(input("Entrada: "))
print("Entrada",a)
if((a!=2)and(a!=5)and(a!=10)and(a!=20)and(a!=50)and(a!=100)):
	print("Animal: Invalido")
else:
	if(a==2):
		print("Animal: Tartarura")
	else:
		if(a==5):
			print("Animal: Garca")
		else:
			if(a==10):
				print("Animal: Arara")
			else:
				if(a==20):
					print("Animal: Mico-leao-dourado")
				else:
					if(a==50):
						print("Animal: Onca-pintada")
					else:
						print("Animal: Garoupa")
						
			
-- OUTPUT:
Entrada 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 07:07:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a=int(input("Entrada: "))
print("Entrada",a)
if((a!=2)and(a!=5)and(a!=10)and(a!=20)and(a!=50)and(a!=100)):
	print("Animal: Invalido")
else:
	if(a==2):
		print("Animal: Tartarura")
	else:
		if(a==5):
			print("Animal: Garca")
		else:
			if(a==10):
				print("Animal: Arara")
			else:
				if(a==20):
					print("Animal: Mico-leao-dourado")
				else:
					if(a==50):
						print("Animal: Onca-pintada")
					else:
						print("Animal: Garoupa")
						
			
-- OUTPUT:
Entrada 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 07:07:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a=int(input("Entrada: "))
print("Entrada",a)
if((a!=2)and(a!=5)and(a!=10)and(a!=20)and(a!=50)and(a!=100)):
	print("Animal: Invalido")
else:
	if(a==2):
		print("Animal: Tartarura")
	else:
		if(a==5):
			print("Animal: Garca")
		else:
			if(a==10):
				print("Animal: Arara")
			else:
				if(a==20):
					print("Animal: Mico-leao-dourado")
				else:
					if(a==50):
						print("Animal: Onca-pintada")
					else:
						print("Animal: Garoupa")
						
			
-- OUTPUT:
Entrada 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 07:07:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a=int(input("Entrada: "))
print("Entrada",a)
if((a!=2)and(a!=5)and(a!=10)and(a!=20)and(a!=50)and(a!=100)):
	print("Animal: Invalido")
else:
	if(a==2):
		print("Animal: Tartarura")
	else:
		if(a==5):
			print("Animal: Garca")
		else:
			if(a==10):
				print("Animal: Arara")
			else:
				if(a==20):
					print("Animal: Mico-leao-dourado")
				else:
					if(a==50):
						print("Animal: Onca-pintada")
					else:
						print("Animal: Garoupa")
						
			
-- OUTPUT:
Entrada 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 07:08:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a=int(input("Entrada: "))
print("Entrada",a)
if((a!=2)and(a!=5)and(a!=10)and(a!=20)and(a!=50)and(a!=100)):
	print("Animal: Invalido")
else:
	if(a==2):
		print("Animal: Tartarura")
	else:
		if(a==5):
			print("Animal: Garca")
		else:
			if(a==10):
				print("Animal: Arara")
			else:
				if(a==20):
					print("Animal: Mico-leao-dourado")
				else:
					if(a==50):
						print("Animal: Onca-pintada")
					else:
						print("Animal: Garoupa")
						
			
-- EXECUTION TIME:
0.203046
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 07:10:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a=int(input("Entrada: "))
print("Entrada",a)
if((a!=2)and(a!=5)and(a!=10)and(a!=20)and(a!=50)and(a!=100)):
	print("Animal: Invalido")
else:
	if(a==2):
		print("Animal: Tartarura")
	else:
		if(a==5):
			print("Animal: Garca")
		else:
			if(a==10):
				print("Animal: Arara")
			else:
				if(a==20):
					print("Animal: Mico-leao-dourado")
				else:
					if(a==50):
						print("Animal: Onca-pintada")
					else:
						print("Animal: Garoupa")
-- OUTPUT:
Entrada 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 07:11:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a=int(input("Entrada: "))
print("Entrada",a)
if((a!=2)and(a!=5)and(a!=10)and(a!=20)and(a!=50)and(a!=100)):
	print("Animal: Invalido")
else:
	if(a==2):
		print("Animal: Tartarura")
	else:
		if(a==5):
			print("Animal: Garca")
		else:
			if(a==10):
				print("Animal: Arara")
			else:
				if(a==20):
					print("Animal: Mico-leao-dourado")
				else:
					if(a==50):
						print("Animal: Onca-pintada")
					else:
						print("Animal: Garoupa")
-- OUTPUT:
Entrada 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 07:11:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a=int(input("Entrada: "))
print("Entrada",a)
if((a!=2)and(a!=5)and(a!=10)and(a!=20)and(a!=50)and(a!=100)):
	print("Animal: Invalido")
else:
	if(a==2):
		print("Animal: Tartarura")
	else:
		if(a==5):
			print("Animal: Garca")
		else:
			if(a==10):
				print("Animal: Arara")
			else:
				if(a==20):
					print("Animal: Mico-leao-dourado")
				else:
					if(a==50):
						print("Animal: Onca-pintada")
					else:
						print("Animal: Garoupa")
-- OUTPUT:
Entrada 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 07:11:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a=int(input("Entrada: "))
print("Entrada",a)
if((a!=2)and(a!=5)and(a!=10)and(a!=20)and(a!=50)and(a!=100)):
	print("Animal: Invalido")
else:
	if(a==2):
		print("Animal: Tartarura")
	else:
		if(a==5):
			print("Animal: Garca")
		else:
			if(a==10):
				print("Animal: Arara")
			else:
				if(a==20):
					print("Animal: Mico-leao-dourado")
				else:
					if(a==50):
						print("Animal: Onca-pintada")
					else:
						print("Animal: Garoupa")
-- OUTPUT:
Entrada 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 07:11:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a=int(input("Entrada: "))
print("Entrada",a)
if((a!=2)and(a!=5)and(a!=10)and(a!=20)and(a!=50)and(a!=100)):
	print("Animal: Invalido")
else:
	if(a==2):
		print("Animal: Tartarura")
	else:
		if(a==5):
			print("Animal: Garca")
		else:
			if(a==10):
				print("Animal: Arara")
			else:
				if(a==20):
					print("Animal: Mico-leao-dourado")
				else:
					if(a==50):
						print("Animal: Onca-pintada")
					else:
						print("Animal: Garoupa")
-- OUTPUT:
Entrada 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 07:11:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a=int(input("Entrada: "))
print("Entrada",a)
if((a!=2)and(a!=5)and(a!=10)and(a!=20)and(a!=50)and(a!=100)):
	print("Animal: Invalido")
else:
	if(a==2):
		print("Animal: Tartarura")
	else:
		if(a==5):
			print("Animal: Garca")
		else:
			if(a==10):
				print("Animal: Arara")
			else:
				if(a==20):
					print("Animal: Mico-leao-dourado")
				else:
					if(a==50):
						print("Animal: Onca-pintada")
					else:
						print("Animal: Garoupa")
-- OUTPUT:
Entrada 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 07:11:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a=int(input("Entrada: "))
print("Entrada",a)
if((a!=2)and(a!=5)and(a!=10)and(a!=20)and(a!=50)and(a!=100)):
	print("Animal: Invalido")
else:
	if(a==2):
		print("Animal: Tartarura")
	else:
		if(a==5):
			print("Animal: Garca")
		else:
			if(a==10):
				print("Animal: Arara")
			else:
				if(a==20):
					print("Animal: Mico-leao-dourado")
				else:
					if(a==50):
						print("Animal: Onca-pintada")
					else:
						print("Animal: Garoupa")
-- OUTPUT:
Entrada 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 07:11:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a=int(input("Entrada: "))
print("Entrada",a)
if((a!=2)and(a!=5)and(a!=10)and(a!=20)and(a!=50)and(a!=100)):
	print("Animal: Invalido")
else:
	if(a==2):
		print("Animal: Tartarura")
	else:
		if(a==5):
			print("Animal: Garca")
		else:
			if(a==10):
				print("Animal: Arara")
			else:
				if(a==20):
					print("Animal: Mico-leao-dourado")
				else:
					if(a==50):
						print("Animal: Onca-pintada")
					else:
						print("Animal: Garoupa")
-- OUTPUT:
Entrada 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 07:13:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a=int(input("Entrada: "))
print("Entrada",a)
if((a!=2)and(a!=5)and(a!=10)and(a!=20)and(a!=50)and(a!=100)):
	print("Animal: Invalido")
elife (a==2):
		print("Animal: Tartarura")
	else:
		if(a==5):
			print("Animal: Garca")
		else:
			if(a==10):
				print("Animal: Arara")
			else:
				if(a==20):
					print("Animal: Mico-leao-dourado")
				else:
					if(a==50):
						print("Animal: Onca-pintada")
					else:
						print("Animal: Garoupa")
-- ERROR:
File "XXXX", line 9
    elife (a==2):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 07:15:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a=int(input("Entrada: "))
print("Entrada",a)
if((a!=2)and(a!=5)and(a!=10)and(a!=20)and(a!=50)and(a!=100)):
	print("Animal: Invalido")
elife (a==2):
		print("Animal: Tartarura")
elife (a==5):
			print("Animal: Garca")
		else:
			if(a==10):
				print("Animal: Arara")
			else:
				if(a==20):
					print("Animal: Mico-leao-dourado")
				else:
					if(a==50):
						print("Animal: Onca-pintada")
					else:
						print("Animal: Garoupa")
-- ERROR:
File "XXXX", line 9
    elife (a==2):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 07:20:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a=int(input("Entrada: "))
print("Entrada",a)
if((a!=2)and(a!=5)and(a!=10)and(a!=20)and(a!=50)and(a!=100)):
	print("Animal: Invalido")
elif(a==2):
	print("Animal: Tartarura")
elif(a==5):
	print("Animal: Garca")
elif(a==10):
	print("Animal: Arara")
elif(a==20):
	print("Animal: Mico-leao-dourado")
elif(a==50):
	print("Animal: Onca-pintada")
else:
	print("Animal: Garoupa")
-- EXECUTION TIME:
0.179187
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 07:20:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a=int(input("Entrada: "))
print("Entrada",a)
if((a!=2)and(a!=5)and(a!=10)and(a!=20)and(a!=50)and(a!=100)):
	print("Animal: Invalido")
elif(a==2):
	print("Animal: Tartarura")
elif(a==5):
	print("Animal: Garca")
elif(a==10):
	print("Animal: Arara")
elif(a==20):
	print("Animal: Mico-leao-dourado")
elif(a==50):
	print("Animal: Onca-pintada")
else:
	print("Animal: Garoupa")
-- OUTPUT:
Entrada 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 07:20:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a=int(input("Entrada: "))
print("Entrada",a)
if((a!=2)and(a!=5)and(a!=10)and(a!=20)and(a!=50)and(a!=100)):
	print("Animal: Invalido")
elif(a==2):
	print("Animal: Tartarura")
elif(a==5):
	print("Animal: Garca")
elif(a==10):
	print("Animal: Arara")
elif(a==20):
	print("Animal: Mico-leao-dourado")
elif(a==50):
	print("Animal: Onca-pintada")
else:
	print("Animal: Garoupa")
-- OUTPUT:
Entrada 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 07:20:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a=int(input("Entrada: "))
print("Entrada",a)
if((a!=2)and(a!=5)and(a!=10)and(a!=20)and(a!=50)and(a!=100)):
	print("Animal: Invalido")
elif(a==2):
	print("Animal: Tartarura")
elif(a==5):
	print("Animal: Garca")
elif(a==10):
	print("Animal: Arara")
elif(a==20):
	print("Animal: Mico-leao-dourado")
elif(a==50):
	print("Animal: Onca-pintada")
else:
	print("Animal: Garoupa")
-- OUTPUT:
Entrada 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 07:20:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a=int(input("Entrada: "))
print("Entrada",a)
if((a!=2)and(a!=5)and(a!=10)and(a!=20)and(a!=50)and(a!=100)):
	print("Animal: Invalido")
elif(a==2):
	print("Animal: Tartarura")
elif(a==5):
	print("Animal: Garca")
elif(a==10):
	print("Animal: Arara")
elif(a==20):
	print("Animal: Mico-leao-dourado")
elif(a==50):
	print("Animal: Onca-pintada")
else:
	print("Animal: Garoupa")
-- OUTPUT:
Entrada 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 07:20:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a=int(input("Entrada: "))
print("Entrada",a)
if((a!=2)and(a!=5)and(a!=10)and(a!=20)and(a!=50)and(a!=100)):
	print("Animal: Invalido")
elif(a==2):
	print("Animal: Tartarura")
elif(a==5):
	print("Animal: Garca")
elif(a==10):
	print("Animal: Arara")
elif(a==20):
	print("Animal: Mico-leao-dourado")
elif(a==50):
	print("Animal: Onca-pintada")
else:
	print("Animal: Garoupa")
-- OUTPUT:
Entrada 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 07:22:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a=int(input("Entrada: "))
print("Entrada:",a)
if((a!=2)and(a!=5)and(a!=10)and(a!=20)and(a!=50)and(a!=100)):
	print("Animal: Invalido")
elif(a==2):
	print("Animal: Tartarura")
elif(a==5):
	print("Animal: Garca")
elif(a==10):
	print("Animal: Arara")
elif(a==20):
	print("Animal: Mico-leao-dourado")
elif(a==50):
	print("Animal: Onca-pintada")
else:
	print("Animal: Garoupa")
-- EXECUTION TIME:
0.15035
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
